--- a/css/style.default.css
+++ b/css/style.default.css
@@ -116,8 +116,8 @@ section.background-secondary {
 
 a,
 button {
-  -webkit-transition: all 0.2s;
-  transition: all 0.2s;
+  /*-webkit-transition: all 0.2s;*/
+  /*transition: all 0.2s;*/
 }
 
 .clickable {
@@ -140,8 +140,8 @@ button {
   border-radius: 1.875rem;
   border: solid 1px #ef5285;
   color: #ef5285;
-  -webkit-transition: all 0.3s;
-  transition: all 0.3s;
+  /*-webkit-transition: all 0.3s;*/
+  /*transition: all 0.3s;*/
   font-size: 1.875rem;
   margin: 0 auto 1.875rem;
   text-align: center;
@@ -188,8 +188,8 @@ SIDEBAR + RIGHT COLUMN
 .sidebar-heading a {
   color: #000;
   text-decoration: none;
-  -webkit-transition: all 0.3s;
-  transition: all 0.3s;
+  /*-webkit-transition: all 0.3s;*/
+  /*transition: all 0.3s;*/
 }
 
 .sidebar-heading a:hover {
@@ -354,8 +354,7 @@ SIDEBAR + RIGHT COLUMN
 .small-navbar-heading a {
   color: #000;
   text-decoration: none;
-  -webkit-transition: all 0.3s;
-  transition: all 0.3s;
+
 }
 
 .small-navbar-heading a:hover {
@@ -374,8 +373,7 @@ OFF-CANVAS SIDEBAR BEHAVIOUR
 @media (max-width: 767.98px) {
   .row-offcanvas {
     position: relative;
-    -webkit-transition: all .25s ease-out;
-    transition: all .25s ease-out;
+
     opacity: 1;
   }
   .row-offcanvas-right {
@@ -524,12 +522,11 @@ p.social a {
   line-height: 2.5rem;
   font-size: 0.9375rem;
   text-align: center;
-  -webkit-transition: all 0.3s;
-  transition: all 0.3s;
+
   vertical-align: bottom;
   border: solid 1px #999;
   color: #999;
-  transition: all 0.3s;
+
   /*
              &.facebook {background-color: #4460ae; border-color: #4460ae;}
              &.gplus {background-color: #c21f25; border-color: #c21f25;}
@@ -720,8 +717,7 @@ ABOUT
   position: relative;
   -webkit-box-shadow: 0 0 5px #ccc;
   box-shadow: 0 0 5px #ccc;
-  -webkit-transition: all 0.3s;
-  transition: all 0.3s;
+
   overflow: hidden;
   text-overflow: ellipsis;
   margin-bottom: 2rem;
@@ -762,8 +758,7 @@ ABOUT
   top: 0;
   padding: 1rem 1.25rem 1rem;
   opacity: 0;
-  -webkit-transition: all 0.3s;
-  transition: all 0.3s;
+
   color: #555;
 }
 
@@ -781,8 +776,7 @@ ABOUT
   top: 30%;
   opacity: 0;
   padding-left: 1.25rem;
-  -webkit-transition: all 0.3s;
-  transition: all 0.3s;
+
   text-align: center;
 }
 
@@ -833,8 +827,7 @@ ABOUT
   height: 100%;
   left: 0;
   top: 0;
-  -webkit-transition: all 0.3s;
-  transition: all 0.3s;
+
 }
 
 .box-masonry .box-masonry-image.with-hover-icon:after {
@@ -846,8 +839,7 @@ ABOUT
   -webkit-transform: translate(0, -50%);
   transform: translate(0, -50%);
   opacity: 0;
-  -webkit-transition: all 0.3s;
-  transition: all 0.3s;
+
   font-family: 'FontAwesome';
   content: '\f105';
   text-align: center;
@@ -1106,16 +1098,12 @@ STYLE SWITCHER FOR DEMO
   font-size: 1rem;
   line-height: 1.5;
   border-radius: 0;
-  -webkit-transition: color 0.15s ease-in-out, background-color 0.15s ease-in-out, border-color 0.15s ease-in-out, -webkit-box-shadow 0.15s ease-in-out;
-  transition: color 0.15s ease-in-out, background-color 0.15s ease-in-out, border-color 0.15s ease-in-out, -webkit-box-shadow 0.15s ease-in-out;
-  transition: color 0.15s ease-in-out, background-color 0.15s ease-in-out, border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
-  transition: color 0.15s ease-in-out, background-color 0.15s ease-in-out, border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out, -webkit-box-shadow 0.15s ease-in-out;
+
 }
 
 @media screen and (prefers-reduced-motion: reduce) {
   .btn {
-    -webkit-transition: none;
-    transition: none;
+
   }
 }
 
@@ -2229,16 +2217,12 @@ a.text-dark:hover, a.text-dark:focus {
   background-color: #fff;
   border: 1px solid #b3b3b3;
   border-radius: 0;
-  -webkit-transition: border-color 0.15s ease-in-out, -webkit-box-shadow 0.15s ease-in-out;
-  transition: border-color 0.15s ease-in-out, -webkit-box-shadow 0.15s ease-in-out;
-  transition: border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
-  transition: border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out, -webkit-box-shadow 0.15s ease-in-out;
+
 }
 
 @media screen and (prefers-reduced-motion: reduce) {
   .form-control {
-    -webkit-transition: none;
-    transition: none;
+
   }
 }
 
