--- a/css/style.default.css
+++ b/css/style.default.css
@@ -695,7 +695,7 @@ ABOUT
 
 /* breadcrumbs */
 .breadcrumb {
-  font-family: "Roboto", Helvetica, Arial, sans-serif;
+  font-family: "Lato", Helvetica, Arial, sans-serif;
   text-transform: uppercase;
   text-align: center;
   font-size: 0.875rem;
@@ -1744,7 +1744,7 @@ STYLE SWITCHER FOR DEMO
  * 3. TYPE  
  */
 body {
-  font-family: "Roboto", Helvetica, Arial, sans-serif;
+  font-family: "Lato", Helvetica, Arial, sans-serif;
   font-size: 1rem;
   font-weight: 400;
   line-height: 1.5;
