--- a/css/style.default.css
+++ b/css/style.default.css
@@ -554,7 +554,7 @@ p.social.social--outline a {
   background: transparent;
 }
 
-p.social.social--outline a.facebook {
+p.social.social--outline a.linkedin {
   color: #4460ae;
   border-color: #4460ae;
 }
